fix color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@ img {
 }
 
 .button {
-    background-color: #04AA6D;
-    color: white;
+    background-color: #07f572;
+    color: black;
     padding: 15px;
     text-align: center;
     text-decoration: none;
